--- a/Aero.Angular/src/assets/i18n/en.json
+++ b/Aero.Angular/src/assets/i18n/en.json
@@ -1,5 +1,8 @@
 {
-    "HOME": {
-        "DARK": "Dark"
+  "HOME": {
+    "SETTINGS": {
+      "DARK": "Dark Mode",
+      "LANGUAGE": "Language"
     }
+  }
 }
