--- a/Aero.Angular/src/assets/i18n/en.json
+++ b/Aero.Angular/src/assets/i18n/en.json
@@ -3,6 +3,10 @@
     "SETTINGS": {
       "DARK": "Dark Mode",
       "LANGUAGE": "Language"
+    },
+    "MENU": {
+      "HOME": "Home",
+      "WORKERS": "Workers"
     }
   }
 }
