--- a/Aero.Angular/src/assets/i18n/fr.json
+++ b/Aero.Angular/src/assets/i18n/fr.json
@@ -3,6 +3,10 @@
     "SETTINGS": {
       "DARK": "Mode Sombre",
       "LANGUAGE": "Langue"
+    },
+    "MENU": {
+      "HOME": "Accueil",
+      "WORKERS": "Workers"
     }
   }
 }
